5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1880_3123.log
== TEST (2019-07-03 14:04:57) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
while(i < size(n)):
	m = m + (((v[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:05:27) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
while(i < size(n)):
	m = m + (((v[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:05:50) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n)):
	m = m + (((v[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:06:05) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n)):
	m = m + (((n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:07:20) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n)):
	m = (m + ((n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:08:23) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n)):
	m = ((m + (n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:09:08) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n)):
	m = ((m + (n[i])**(-1) + n[size(n) -1])/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:14) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < (size(n) - 1):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 5
    while(i < (size(n) - 1):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:27) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < (size(n)- 1)):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:37) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 5
    while(i < size(n):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:10:39) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
0.916437
-- ERROR:
  File "/home/codebench/codes/1880/3123/main.py", line 5
    while(i < size(n):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:41) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 5
    while(i < size(n):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:10:42) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while(i < size(n):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
0.530465
-- ERROR:
  File "/home/codebench/codes/1880/3123/main.py", line 5
    while(i < size(n):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:10:53) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while i < size(n):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:11) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1)/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:38) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:42) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:11:44) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
1.01677
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
6.79
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
vetor n:1.25
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
vetor n:3.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:12:58) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1)) + n[i-1]/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:13:33) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1)) + n[i-1]/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:14:05) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1)) + n[size(n)-1]/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:14:15) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1)) + n[size(n)-1]/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
1.2343
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
0.55
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
0.56
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
0.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:14:18) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + (n[i])**(-1)) + n[size(n)-1]/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:15:32) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (((m + (n[i])**(-1)) + n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:16:10) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (((m + (n[i])**(-1)) + n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:33:50) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = m + (((n[i])**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:03) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = m + ((n[i]**(-1) + n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:20) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = m + ((n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:53) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +(n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:59) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +(n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:37:00) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +(n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
1.10785
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
6.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
0.23
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
3.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:08) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m +(n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:27) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + n[i]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:38:03) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + n[i]**(-1) + n[-1]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:38:30) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m + (n[i]**(-1) + n[-1]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:38:43) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = m + ((n[i]**(-1) + n[-1]**(-1))/size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:40:28) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m + n[i]**(-1)) / size(n)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:02) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m + n[i]**(-1) + n[-1]**(-1)) / size(n)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:36) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:34) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + n[i]**(-1) + n[size(n)]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:43:30) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + n[i]**(-1) + n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:43:45) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m + n[i]**(-1) + n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
0.979658
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
3.82
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
1.92
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
2.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:44:17) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:45:02) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = ((m +( n[i]**(-1)) / size(n))**(-1))*10
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:45:17) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:27) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = m +(( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:45) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:46:48) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- EXECUTION TIME:
1.15664
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
6.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
vetor n:0.23
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
vetor n:3.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:47:00) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:48:12) 
-- CODE:
from numpy import*
n = array(eval(input("vetor n:")))
i = 0
m = 0
while (i < size(n)):
	m = (m +( n[i]**(-1)) / size(n))**(-1)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
